--- a/views/updateFields.ejs
+++ b/views/updateFields.ejs
@@ -14,10 +14,13 @@
   </head>
   <body>
     <form
-      class="my-form container-sm text-left d-none"
-      action="/submit"
+      id="editForm"
+      class="my-form container-sm text-left"
+      action="/submitEdit"
       method="POST"
     >
+      <input type="hidden" name="id" value="<%= locals.id %>" />
+
       <!-- Add title -->
       <div class="form-group my-4">
         <label for="formTitle">Add Title</label>
@@ -73,6 +76,36 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
-    <script></script>
+    <script>
+      // $(document).ready(function () {
+      //   $("#editForm").on("submit", function (e) {
+      //     e.preventDefault(); // Prevent the form from submitting the default way
+
+      //     const id = $('input[name="id"]').val();
+      //     const title = $('input[name="fTitle"]').val();
+      //     const description = $('textarea[name="fDescription"]').val();
+
+      //     $.ajax({
+      //       url: `/submitEdit/${id}`,
+      //       method: "PUT",
+      //       contentType: "application/json",
+      //       data: JSON.stringify({
+      //         fTitle: title,
+      //         fDescription: description,
+      //       }),
+      //       success: function (response) {
+      //         if (response.success) {
+      //           window.location.href = "/"; // Redirect to the home page or wherever
+      //         } else {
+      //           alert("Failed to update the post");
+      //         }
+      //       },
+      //       error: function (error) {
+      //         console.error("Error:", error);
+      //       },
+      //     });
+      //   });
+      // });
+    </script>
   </body>
 </html>
