--- a/views/detailedView.ejs
+++ b/views/detailedView.ejs
@@ -13,8 +13,8 @@
     <title>Blog Details</title>
   </head>
   <body>
-    <div class="container mt-4">
-      <h1><%= data.title %></h1>
+    <div class="details-container mt-4">
+      <h1 class=""><%= data.title %></h1>
       <p><%= data.description %></p>
     </div>
 
