--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,11 +11,27 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse navbar-line" id="navbarNavAltMarkup">
       <div class="navbar-nav mx-auto">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">About</a>
-        <a class="nav-link" href="#">Contact</a>
+        <a
+          class="nav-link btn btn-outline-secondary btn-sm"
+          aria-current="page"
+          href="#"
+        >
+          Home
+        </a>
+        <a
+          class="nav-link btn btn-outline-secondary btn-sm"
+          href="/views/about.ejs"
+        >
+          About
+        </a>
+        <a
+          class="nav-link btn btn-outline-secondary btn-sm"
+          href="/views/contact.ejs"
+        >
+          Contact
+        </a>
       </div>
     </div>
   </div>
